--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/react": "^17.0.35",
+    "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
