--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.0.2",
     "react-scripts": "^4.0.3",
     "tumblr.js": "^3.0.0",
     "typescript": "^4.5.2",
