--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
+    "tailwindcss": "^2.2.19",
     "tumblr.js": "^3.0.0",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
