--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
+    "sass": "^1.43.4",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
