🧰chore:  react-helmet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "cSpell.words": ["behance", "deviantart", "Nakata", "pixiv"]
+  "cSpell.words": ["behance", "deviantart", "mieze", "Nakata", "pixiv"]
 }
