--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "mieze",
+  "name": "mieze illustration",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "https://64.media.tumblr.com/avatar_563013216987_64.png",
+      "sizes": "64x64",
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
+      "src": "https://64.media.tumblr.com/avatar_563013216987_128.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "128x128"
     },
     {
-      "src": "logo512.png",
+      "src": "https://64.media.tumblr.com/avatar_563013216987_512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
