--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,6 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
+  "description": "by Ayu Nakata. Osaka, Japan-based illustrator/artist.",
   "background_color": "#ffffff"
 }
