--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^9",
     "axios": "^0.24.0",
+    "postcss": "^7",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,15 +19,15 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
     "sass": "^1.43.4",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
