⚡️perf: header, phpの不要ファイル削除

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "cSpell.words": ["behance", "deviantart", "mieze", "Nakata", "pixiv"]
+  "cSpell.words": [
+    "behance",
+    "browserslist",
+    "craco",
+    "deviantart",
+    "mieze",
+    "Nakata",
+    "pixiv",
+    "tailwindcss"
+  ]
 }
