--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "autoprefixer": "^9",
     "axios": "^0.24.0",
     "postcss": "^7",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
