--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mieze_illustration",
+  "homepage": "https://mieze018.github.io/mieze018.net/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,7 @@
     "@types/react-lazy-load-image-component": "^1.5.2",
     "autoprefixer": "^9",
     "axios": "^0.24.0",
+    "gh-pages": "^3.2.3",
     "postcss": "^7",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
@@ -28,6 +30,7 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
+    "deploy": "yarn build && gh-pages -d build",
     "test": "craco test",
     "eject": "craco eject"
   },
