--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
-    "sass": "^1.43.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
@@ -51,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier-plugin-tailwind": "^2.2.12"
   }
 }
