--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "GENERATE_SOURCEMAP=false craco build",
     "deploy": "yarn build && gh-pages -d build",
     "test": "craco test",
     "eject": "craco eject"
