--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,22 @@
   "cSpell.words": [
     "behance",
     "browserslist",
+    "combinator",
     "craco",
     "deviantart",
+    "ijuice",
+    "KADOKAWA",
+    "Kaku",
+    "kakugo",
+    "Laxenanchaos",
+    "Linktree",
     "mieze",
+    "mincho",
     "Nakata",
     "photoset",
     "pixiv",
-    "tailwindcss"
+    "stylelint",
+    "tailwindcss",
+    "welle"
   ]
 }
