--- a/.env
+++ b/.env
@@ -6,9 +6,10 @@ REACT_APP_title=mieze illustration
 REACT_APP_description=by Ayu Nakata. Osaka, Japan-based illustrator/artist.
 REACT_APP_author=Ayu Nakata
 REACT_APP_mail=mieze@mieze018.net
-REACT_APP_twitter_url=https://twitter.com/mieze018
+REACT_APP_linktree=https://linktr.ee/mieze018
+REACT_APP_twitter_url=https://twitter.com/mieze018/
 REACT_APP_deviantart_url=https://mieze018.deviantart.com/
 REACT_APP_pixiv_url=https://www.pixiv.net/users/1144713/
 REACT_APP_behance_url=https://www.behance.net/mieze018/
-REACT_APP_instagram_url=https://instagram.com/mieze018/
+REACT_APP_instagram_url=https://www.instagram.com/mieze018/
 REACT_APP_booth_url=https://mieze.booth.pm/
