--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,16 @@
     "behance",
     "browserslist",
     "combinator",
+    "compat",
     "craco",
+    "csstree",
     "deviantart",
     "ijuice",
     "KADOKAWA",
     "Kaku",
     "kakugo",
     "Laxenanchaos",
+    "Lemo",
     "Linktree",
     "mieze",
     "mincho",
@@ -19,6 +22,7 @@
     "pixiv",
     "stylelint",
     "tailwindcss",
+    "webp",
     "welle"
   ]
 }
