--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "stylelint-prettier": "^2.0.0",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^24.0.0",
-    "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^4.0.0"
+    "stylelint-csstree-validator": "^1.9.0"
   }
 }
