--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
+    "react-transition-group": "^4.4.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
@@ -53,12 +54,13 @@
     ]
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.4",
     "prettier-plugin-tailwind": "^2.2.12",
     "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-prettier": "^2.0.0",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^24.0.0",
-    "stylelint-csstree-validator": "^1.9.0"
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-prettier": "^2.0.0"
   }
 }
