--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_api_Key = 9MDztWXXMhCeeN5rXMyS89gqMxoIKNRegyqnOfFK81iscjVzEp
 REACT_APP_Tumblr_username = mieze018
 REACT_APP_github_repo_name=mieze018.net
-REACT_APP_url=https://www.mieze018.net
+REACT_APP_url=https://www.mieze018.net/
 REACT_APP_title=mieze illustration
 REACT_APP_description=by Ayu Nakata. Osaka, Japan-based illustrator/artist.
 REACT_APP_author=Ayu Nakata
