--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^9",
     "axios": "^0.24.0",
     "gh-pages": "^3.2.3",
+    "http-proxy-middleware": "^2.0.1",
     "postcss": "^7",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
