⚡️perf: APIの設定の書き方を整理

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+REACT_APP_api_URI = https://api.tumblr.com/v2/blog/
 REACT_APP_api_Key = 9MDztWXXMhCeeN5rXMyS89gqMxoIKNRegyqnOfFK81iscjVzEp
 REACT_APP_Tumblr_username = mieze018
 REACT_APP_github_repo_name=mieze018.net
