--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "craco start",
     "build": "GENERATE_SOURCEMAP=false craco build",
-    "deploy": "yarn build && gh-pages -d build",
+    "deploy": "GENERATE_SOURCEMAP=false craco build && gh-pages -d build",
     "test": "craco test",
     "eject": "craco eject",
     "lint:css": "stylelint --fix **/*.{css,scss,sass}"
