🧰chore: 複数プロジェク開いてる時に視認性向上のためにvscodeの各ウィンドに色つけれる拡張機能を入れた

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,10 @@
     "tailwindcss",
     "webp",
     "welle"
-  ]
+  ],
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#be8666",
+    "titleBar.activeBackground": "#be8666",
+    "titleBar.activeForeground": "#F8F9FD"
+  }
 }
