--- a/package.json
+++ b/package.json
@@ -63,5 +63,6 @@
     "stylelint-config-standard": "^24.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-prettier": "^2.0.0"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
