⚡️perf: vscode拡張機能のオートフォールドの設定を追加した

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
     "webp",
     "welle"
   ],
+  "autofold.default": 0,
   "workbench.colorCustomizations": {
     "activityBar.background": "#be8666",
     "titleBar.activeBackground": "#be8666",
