--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@types/react-transition-group": "^4.4.4",
+    "eslint-config-prettier": "^8.3.0",
     "prettier-plugin-tailwind": "^2.2.12",
     "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3",
