--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "^4.0.3",
     "react-transition-group": "^4.4.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
