--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "importHelpers": true
   },
   "include": ["src"]
 }
