--- a/package.json
+++ b/package.json
@@ -35,12 +35,24 @@
     "eject": "react-scripts eject",
     "build": "GENERATE_SOURCEMAP=false craco build",
     "deploy": "GENERATE_SOURCEMAP=false craco build && gh-pages -d build",
-    "lint:css": "stylelint --fix **/*.{css,scss,sass}"
+    "lint:css": "stylelint --fix **/*.{css,scss,sass}",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -56,6 +68,16 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/builder-webpack5": "^6.4.19",
+    "@storybook/manager-webpack5": "^6.4.19",
+    "@storybook/node-logger": "^6.4.19",
+    "@storybook/preset-create-react-app": "^4.0.1",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "^0.0.9",
     "@types/react-transition-group": "^4.4.4",
     "eslint-config-prettier": "^8.3.0",
     "prettier-plugin-tailwind": "^2.2.12",
@@ -64,6 +86,7 @@
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-csstree-validator": "^2.0.0",
-    "stylelint-prettier": "^2.0.0"
+    "stylelint-prettier": "^2.0.0",
+    "webpack": "^5.69.1"
   }
 }
