--- a/package.json
+++ b/package.json
@@ -4,18 +4,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "@types/react-lazy-load-image-component": "^1.5.2",
-    "autoprefixer": "^10",
     "axios": "^0.26.0",
     "gh-pages": "^3.2.3",
     "http-proxy-middleware": "^2.0.1",
-    "postcss": "^8",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,7 +21,6 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.4"
@@ -79,9 +75,15 @@
     "@storybook/preset-create-react-app": "^4.0.1",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/react-transition-group": "^4.4.4",
+    "autoprefixer": "^10.4.2",
     "chromatic": "^6.4.3",
     "eslint-config-prettier": "^8.3.0",
+    "postcss": "^8.4.6",
     "prettier-plugin-tailwind": "^2.2.12",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
@@ -89,6 +91,7 @@
     "stylelint-config-standard": "^24.0.0",
     "stylelint-csstree-validator": "^2.0.0",
     "stylelint-prettier": "^2.0.0",
+    "tailwindcss": "^3.0.23",
     "webpack": "^5.69.1"
   }
 }
