--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
+    "recoil": "^0.6.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.4"
