--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "start": "react-scripts start",
     "test": "react-scripts test --watchAll",
     "eject": "react-scripts eject",
-    "build": "GENERATE_SOURCEMAP=false craco build",
-    "deploy": "GENERATE_SOURCEMAP=false craco build && gh-pages -d build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "deploy": "GENERATE_SOURCEMAP=false react-scripts build && gh-pages -d build",
     "lint:css": "stylelint --fix **/*.{css,scss,sass}",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
