--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-transition-group": "^4.4.2",
     "recoil": "^0.6.1",
     "tslib": "^2.3.1",
+    "twin.macro": "^2.8.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
