--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.17.5",
+    "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +15,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "axios": "^0.26.0",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "^8.18.0",
     "gh-pages": "^3.2.3",
     "http-proxy-middleware": "^2.0.1",
