--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.6.1",
+    "styled-components": "^5.3.5",
     "tslib": "^2.3.1",
+    "twin.macro": "^2.8.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -97,7 +99,7 @@
     "stylelint-config-standard": "^25.0.0",
     "stylelint-csstree-validator": "^2.0.0",
     "stylelint-prettier": "^2.0.0",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.1.4",
     "webpack": "^5.69.1"
   }
 }
