twin構成を追加

--- a/package.json
+++ b/package.json
@@ -61,6 +61,11 @@
       }
     ]
   },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+      }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
