--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "babelMacros": {
     "twin": {
       "preset": "styled-components"
-      }
+    }
   },
   "browserslist": {
     "production": [
@@ -94,6 +94,7 @@
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.2",
     "@types/react-transition-group": "^4.4.4",
+    "@types/styled-components": "^5.1.25",
     "chromatic": "^6.5.1",
     "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.4.14",
