--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "recoil": "^0.7.4",
     "styled-components": "^5.3.5",
     "tslib": "^2.3.1",
-    "twin.macro": "^2.8.2",
+    "twin.macro": "^3.0.0-rc.3",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
